# kvsp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.Ubuntu_20.04_CUDA_11  LICENSE  Makefile  README.md  build_on_aws.sh  kvsp  kvsp.def  test.sh  toolbox.sh
app/: main.go
examples/: 0002-fib.c  0003-bf.c  0004-lisp.c  0005-prime.c  0006-editdis.c  0007-perceptron.c  0008-rpn.c  0009-gameoflife.c  0010-struct.c  fib.c  mitou.s
kvsp/: main.go  packet.go
share/: cahp-diamond.toml  cahp-emerald.toml  cahp-pearl.toml  cahp-ruby.toml
tfheutil/: .clang-format  CMakeLists.txt  Makefile  main.cpp
